
The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

Added
~~~~~

- Options to create a session with re-using a JSESSION ID instead of logging in and a BaseXNATSession that does
  not destroy the session on disconnect

Changed
~~~~~~~

- Allow import functions to take project, subject and experiment as xnatpy objects as well as strings

Fixed
~~~~~

- Failure to connect with redirection when url has a trailing ``/``
- Added an special auth for requests to avoid it automatically reading the netrc and using
  basic auth, ruining the efficiency from cookie based sessions.
- Deleting an object should also remove it from the connection and listing caches

0.3.26 - 2021-04-16
-------------------

Improved
~~~~~~~~

- Switched to cookie based login instead of basic auth with every requests (should be more performant)
- Close underlying requests session when closing a connection
- Added CI/CD infrastructure for testing and releasing
- Improved import_dicom_inbox

Fixed
~~~~~

- InvestigatorData had nonsensical string conversion
- Option to flatten directories when downloading an entire resource
- Bug with resource labels doing unwanted quotation on creation
- Added timeouts and caught them on initial requests (before the xnat session was established)


0.3.25 - 2020-09-24
-------------------

Added
~~~~~

- Added ``import_dicom_inbox`` function to import dicoms from server filesystem
  via a path
- Support of querying information for FileData via the containing resource file
  listing, giving access to file_content, file_format, digest, etc

Fixed
~~~~~

- Fixed issue when creating objects with a space in the label, the object would
  be created but the uri with the label (and spaces) would not work, making the
  return object useless. Now it updates the URI to use the generated ID if
  possible avoiding the issue.

0.3.24 - 2020-06-19